--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="./logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ตลาดเจริญกรุง103</title>
+    <title>ตลาดริมคลองเจริญกรุง103</title>
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
           pageLanguage: 'th', // Default language
+          includedLanguages: 'en', // Languages to include (only English in this case)
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
         }, 'google_translate_element');
       }
