--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
           pageLanguage: 'th', // Default language
-          includedLanguages: 'en', // Languages to include (only English in this case)
+          includedLanguages: 'en,zh-CN,ja,id',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
         }, 'google_translate_element');
       }
