--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
-          pageLanguage: 'th', // Default language
-          includedLanguages: 'en,zh-CN,ja,id',
+          includedLanguages: 'th,en,zh-CN,ja,id,ms,ar',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
         }, 'google_translate_element');
       }
